install controller_plugins.xml

--- a/pr2_gripper_sensor_controller/CMakeLists.txt
+++ b/pr2_gripper_sensor_controller/CMakeLists.txt
@@ -27,5 +27,8 @@ install(TARGETS pr2_gripper_sensor_controller_lib
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
+install(FILES controller_plugins.xml
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+
 install(DIRECTORY include/${PROJECT_NAME}/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
