--- a/pr2_gripper_sensor_controller/CMakeLists.txt
+++ b/pr2_gripper_sensor_controller/CMakeLists.txt
@@ -30,5 +30,6 @@ install(TARGETS pr2_gripper_sensor_controller_lib
 install(FILES controller_plugins.xml
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
 
-install(DIRECTORY launch include/${PROJECT_NAME}/
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+install(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+
+install(DIRECTORY include/${PROJECT_NAME} ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
