--- a/pr2_gripper_sensor_controller/CMakeLists.txt
+++ b/pr2_gripper_sensor_controller/CMakeLists.txt
@@ -32,4 +32,4 @@ install(FILES controller_plugins.xml
 
 install(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
 
-install(DIRECTORY include/${PROJECT_NAME} ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
+install(DIRECTORY include/${PROJECT_NAME}/ DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
