--- a/pr2_gripper_sensor_controller/package.xml
+++ b/pr2_gripper_sensor_controller/package.xml
@@ -2,7 +2,7 @@
   <name>pr2_gripper_sensor_controller</name>
   <version>1.0.9</version>
   <description>The pr2_gripper_sensor_controller package is a real-time controller that integrates signals from the PR2 hand-mounted accelerometer and finger-mounted pressure sensors with motor control of the gripper joint to do highly responsive sensing and low-latency closed-loop control.</description>
-  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
+  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
 
   <license>BSD</license>
 
